--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ script:
   - wget https://github.com/boot2docker/boot2docker/releases/download/v1.10.2/boot2docker.iso
 after_success: |
   if [ -n "$GITHUB_API_KEY" ]; then
-    git config --gloal user.name "travis_auto"
-    git config --gloal user.email "qinka@live.com"
+    git config --global user.name "travis_auto"
+    git config --global user.email "qinka@live.com"
     cd ~
     git clone https://qinka:$GITHUB_API_KEY@github.com/GetBoot2Docker.git
     cd GetBoot2Docker
