--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 env:
   - VER=v1.10.2
 script:
-  - wget https://github.com/boot2docker/boot2docker/releases/download/v1.10.2/boot2docker.iso
+  - wget https://github.com/rancher/os/releases/download/v0.4.3/rancheros.iso
 after_success: |
   if [ -n "$GITHUB_API_KEY" ]; then
     git config --global user.name "travis_auto"
